# qa-bot-tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
data/: ai_test_bug_report.docx  ai_test_user_feedback.docx
frontend/: main.py
src/graphs/: _schema.py  graphs.py
src/tools/: tools.py
src/utils/: ingest.py  llm.py  vector.py
